# peregrineindex

./: .clang-format  CMakeLists.txt  README.md
include/peregrine/: status_code.hh  version.hh
include/peregrine/internal/: common.hh  file.hh  log.hh  mmap_file.hh  system.hh  type_traits.hh
src/: CMakeLists.txt  status_code.cc  system.cc  system_mock.cc
tests/: CMakeLists.txt  file_test.cc  peregrine_test.cc
